# docs/spec/generated/openapi.json
@@ -239,6 +239,14 @@
                     "minimum": 0,
                     "maximum": 9007199254740991
                   },
+                  "instructedOn": {
+                    "type": "string",
+                    "pattern": "^\\d{4}-\\d{2}-\\d{2}$"
+                  },
+                  "dueDate": {
+                    "type": "string",
+                    "pattern": "^\\d{4}-\\d{2}-\\d{2}$"
+                  },
                   "assets": {
                     "minItems": 1,
                     "maxItems": 500,
@@ -1997,7 +2005,7 @@
                     "minLength": 3
                   },
                   "useForReport": {
-                    "default": true,
+                    "default": false,
                     "type": "boolean"
                   }
                 },
